# TheUltimateStrategy

./: .gitignore  CMakeLists.txt  COPYING  FAQ  README  RELEASE
Bots/: run
Bots/ModeratorServer/: BotConnectionConfiguration.h  BotConnectionManager.h  CMakeLists.txt  IGameControl.h  IModeratorContext.h  IModeratorInterface.h  ModeratorContext.cpp  ModeratorContextBuilder.cpp  ModeratorContextBuilder.h  ModeratorServerConfiguration.cpp  SimpleGameControl.h  TusCommandBuilder.h  main.cpp
Bots/ModeratorServer/console/: CMakeLists.txt  CloseCommand.h  ConfigurableCommandFactory.h  Console.h  ConsoleInterpreter.h  EchoCommand.h  main.cpp
Bots/ModeratorServer/console/include/: ACommand.h  ConsoleFacade.h  ICommand.h  ICommandCreator.h  ICommandFactory.h  IConfigurableCommandFactory.h
Bots/ModeratorServer/console/src/: CloseCommand.h  ConfigurableCommandFactory.cpp  ConsoleInterpreter.cpp  ConsoleInterpreter.h  EchoCommand.h
Bots/ModeratorServer/console/ut/: CMakeLists.txt  ConsoleFacadeProvidedCloseCommandShould.cpp  ConsoleFacadeShould.cpp  ConsoleMocks.cpp  ConsoleMocks.h  main.cpp
ModeratorServer/: BotConnectionManager.cpp  CMakeLists.txt  Credentials.cpp  Credentials.h  GeneralConfig.h  IBotConnection.h  IModeratorContext.h  IModeratorInterface.h  Moderator.cpp  Moderator.h  ModeratorContext.cpp  ModeratorContext.h  ModeratorContextBuilder.cpp  ModeratorContextBuilder.h  ModeratorInterface.cpp  ModeratorInterface.h  TusCommandBuilder.h  TusMessageBuffer.cpp  main.cpp  wtf.h
ModeratorServer/console/include/: ICommand.h  ICommandFactory.h  IConfigurableCommandFactory.h  IConsole.h  IConsoleInterpreter.h
ModeratorServer/console/src/: ConfigurableCommandFactory.h  Console.cpp  Console.h  ConsoleFacade.cpp
ModeratorServer/console/ut/: CMakeLists.txt  ConsoleFacadeProvidedEchoCommandShould.cpp  ICommandParamsShould.cpp  main.cpp
TUSCore/IntegrationFunctional/: CMakeLists.txt  Jamfile  main.cpp
TUSCore/IntegrationFunctional/Executors/Building/: ExecutorBuildBuildingTest.cpp  ExecutorDestroyBuildingTest.cpp  ExecutorGetBuildingTest.cpp  ExecutorGetBuildingsTest.cpp
TUSCore/IntegrationFunctional/Executors/Epoch/: ExecutorActivateEpochTest.cpp  ExecutorCreateEpochTest.cpp  ExecutorDeactivateEpochTest.cpp  ExecutorDeleteEpochTest.cpp  ExecutorFinishEpochTest.cpp  ExecutorGetEpochTest.cpp  ExecutorTickEpochTest.cpp
TUSCore/IntegrationFunctional/Executors/Human/: ExecutorDismissHumanTest.cpp  ExecutorEngageHumanTest.cpp  ExecutorGetHumanTest.cpp  ExecutorGetHumansTest.cpp
TUSCore/IntegrationFunctional/Executors/Land/: ExecutorCreateLandTest.cpp  ExecutorDeleteLandTest.cpp  ExecutorGetLandTest.cpp  ExecutorGetLandsTest.cpp
TUSCore/IntegrationFunctional/Executors/Resource/: ExecutorGetResourcesTest.cpp
TUSCore/IntegrationFunctional/Executors/Settlement/: ExecutorCreateSettlementTest.cpp  ExecutorDeleteSettlementTest.cpp  ExecutorGetSettlementTest.cpp  ExecutorGetSettlementsTest.cpp
TUSCore/IntegrationFunctional/Executors/Transport/: ExecutorTransportHumanTest.cpp  ExecutorTransportResourceTest.cpp
TUSCore/IntegrationFunctional/Executors/Turn/: ExecutorTurnTest.cpp
TUSCore/IntegrationFunctional/Executors/World/: ExecutorCreateWorldTest.cpp
TUSCore/IntegrationFunctional/Helpers/: IntegrationFunctionalTest.hpp
TUSCore/IntegrationFunctional/Helpers/XmlRPCClient/ClientSynchronous/: ClientSynchronous.cpp
TUSCore/IntegrationStress/: CMakeLists.txt
TUSCore/IntegrationStress/Executors/Land/: ExecutorCreateLandTest.cpp  ExecutorDeleteLandTest.cpp  ExecutorGetLandTest.cpp  ExecutorGetLandsTest.cpp
TUSCore/IntegrationStress/Executors/Settlement/: ExecutorCreateSettlementTest.cpp  ExecutorDeleteSettlementTest.cpp  ExecutorGetSettlementTest.cpp
TUSCore/IntegrationStress/Helpers/: IntegrationStressTest.hpp
TUSCore/IntegrationStress/Helpers/XmlRPCClient/ClientSynchronous/: ClientSynchronous.cpp
TUSCore/Network/XmlRPCServer/: CMakeLists.txt  Configurator.cpp  Configurator.hpp  Context.cpp  Context.hpp  IContext.hpp  Jamfile  serverconfig.xml  xml_server_main.cpp
TUSCore/Network/XmlRPCServer/Configurator/: Configurator.cpp  Configurator.hpp  IConfigurator.hpp
TUSCore/Network/XmlRPCServer/Configurator/Base/: ConfiguratorBase.cpp  ConfiguratorBase.hpp  IConfiguratorBase.hpp
TUSCore/Network/XmlRPCServer/Configurator/Building/: ConfiguratorBuilding.cpp  ConfiguratorBuilding.hpp  IConfiguratorBuilding.hpp
TUSCore/Network/XmlRPCServer/Configurator/Human/: ConfiguratorHuman.cpp  ConfiguratorHuman.hpp  IConfiguratorHuman.hpp
TUSCore/Network/XmlRPCServer/Configurator/Resource/: ConfiguratorResource.cpp  ConfiguratorResource.hpp  IConfiguratorResource.hpp
TUSCore/Network/XmlRPCServer/Connection/: ConnectionDisposable.cpp  ConnectionDisposable.hpp  IConnection.hpp
TUSCore/Network/XmlRPCServer/Request/: IRequestDispatcher.hpp  RequestDispatcher.cpp  RequestDispatcher.hpp  RequestHandler.cpp  RequestHandler.hpp  RequestParser.hpp
TUSCore/Network/XmlRPCServer/Request/Executors/: Executor.cpp  Executor.hpp  IExecutor.hpp
TUSCore/Network/XmlRPCServer/Request/Executors/Building/: ExecutorBuildBuilding.cpp  ExecutorBuildBuilding.hpp  ExecutorDestroyBuilding.cpp  ExecutorDestroyBuilding.hpp  ExecutorGetBuilding.cpp  ExecutorGetBuilding.hpp  ExecutorGetBuildings.cpp  ExecutorGetBuildings.hpp
TUSCore/Network/XmlRPCServer/Request/Executors/Epoch/: ExecutorActivateEpoch.cpp  ExecutorActivateEpoch.hpp  ExecutorCreateEpoch.cpp  ExecutorCreateEpoch.hpp  ExecutorDeactivateEpoch.cpp  ExecutorDeactivateEpoch.hpp  ExecutorDeleteEpoch.cpp  ExecutorDeleteEpoch.hpp  ExecutorFinishEpoch.cpp  ExecutorFinishEpoch.hpp  ExecutorGetEpoch.cpp  ExecutorGetEpoch.hpp  ExecutorTickEpoch.cpp  ExecutorTickEpoch.hpp
TUSCore/Network/XmlRPCServer/Request/Executors/Generic/: ExecutorEcho.cpp  ExecutorEcho.hpp  (+2 more)
TUSCore/Network/XmlRPCServer/Server/: Server.cpp  Server.hpp
TUSCore/NetworkUT/: CMakeLists.txt  Jamfile
TUSCore/NetworkUT/XmlRPCCommon/Reply/: ReplyTest.cpp
TUSCore/NetworkUT/XmlRPCCommon/Request/: RequestTest.cpp
TUSCore/NetworkUT/XmlRPCServer/Request/: RequestParserTest.cpp
(+3348 files in other folders)
