PROJECT(xmlrpcserver)

INCLUDE_DIRECTORIES(${PROJECT_BINARY_DIR}/../..)

FILE(GLOB_RECURSE FILES_XMLRPCSERVER *.cpp)
FILE(GLOB_RECURSE FILES_XMLRPCSERVER_FILTERED xml_server_main.cpp)

LIST(REMOVE_ITEM FILES_XMLRPCSERVER ${FILES_XMLRPCSERVER_FILTERED})

ADD_LIBRARY(xmlrpcserver
    ${FILES_XMLRPCSERVER}
)

TARGET_LINK_LIBRARIES(xmlrpcserver
    gameserver
)
